Misc GUI changes, ignoring fastclick on toggle boxes to see if that might help toggling issues on some devices added scroll on city selector view updated cluster thirdparty in hope of getting rid of cluster bug updated fastclick changed geo location from feature to plugin (should not matter, but this is the right way to do it in later phonegap versions)

--- a/stylesheets/menu/city.css
+++ b/stylesheets/menu/city.css
@@ -11,6 +11,7 @@ div.menu-city div.navigation {
   width: 100%;
   position: absolute;
   top: 0px;  
+  z-index: 50;
 }
 
 div.menu-city div.navigation div.top {
@@ -30,6 +31,8 @@ div.menu-city div.navigation div.top {
 div.menu-city div.menu {
   padding-top: 55px;
   height: 100%;
+  overflow-y: scroll;
+
 }
 
 div.menu-city div.menu div.option{
