--- a/stylesheets/menu/show.css
+++ b/stylesheets/menu/show.css
@@ -11,6 +11,7 @@ div.menu-show div.navigation {
   width: 100%;
   position: absolute;
   top: 0px;  
+  z-index: 50;
 }
 
 div.menu-show div.navigation div.top {
